[package]
name = "pipeless"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["pipeless", "api"]
categories = ["web-programming", "api-bindings"]
description = "Pipeless API"
repository = "https://github.com/apibillme/pipeless"
readme = "README.md"

[dependencies]
