[package]
name = "rollbars"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["rollbar", "api"]
categories = ["web-programming", "api-bindings"]
description = "Rollbar API"
repository = "https://github.com/apibillme/rollbars"
readme = "README.md"

[dependencies]
